[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_there_iv"
version = "0.0.1"
authors = [
  { name="Vicente Gutiérrez", email="vicente@dotruntime.com" },
]
description = "A simple package for testing purposes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vcgtz/hello-there-iv"
Issues = "https://github.com/vcgtz/hello-there-iv/issues"
